--- a/index.html
+++ b/index.html
@@ -85,5 +85,31 @@
         <img src="images/hero-img.svg" alt="">
         <h1>heading inside hero</h1>
     </header>
+    
+    <hr>
+
+    <h2>@section</h2>
+    <section>
+        <h3>white section</h3>
+        <p>this will have white background</p>
+    </section>
+
+    <section>
+        <h3>off-white section</h3>
+        <p>this will have gray background</p>
+    </section>
+
+    <hr>
+
+    <h2>@footer</h2>
+    <footer>
+        <div>Some small heading inside footer</div>
+        <ul>
+            <li>socialOne</li>
+            <li>socialTwo</li>
+            <li>socialThree</li>
+        </ul>
+    </footer>
+    
 </body>
 </html>
