update: social links added

--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
     <footer class="footer">
         <div class="footer-header">social links</div>
         <ul class="social-links list-non-bullet">
-            <li class="list-item-inline"><a class="link" href="https://github.com/omgaikwad">github</a></li>
-            <li class="list-item-inline"><a class="link" href="https://twitter.com/OmGaikwad_">twitter</a></li>
-            <li class="list-item-inline"><a class="link" href="#">linkedIn</a></li>
+            <li class="list-item-inline"><a class="link" href="https://github.com/omgaikwad" target="_blank">github</a></li>
+            <li class="list-item-inline"><a class="link" href="https://twitter.com/OmGaikwad_" target="_blank">twitter</a></li>
+            <li class="list-item-inline"><a class="link" href="https://www.linkedin.com/in/omgaikwad1/" target="_blank">linkedIn</a></li>
         </ul>
     </footer>
 
