--- a/lib/components.html
+++ b/lib/components.html
@@ -87,7 +87,7 @@
     <h2>@header</h2>
 
     <header class="hero">
-        <img class="hero-img" src="images/hero-img.svg" alt="">
+        <img class="hero-img" src="/images/hero-img.svg" alt="">
         <h1 class="hero-heading">heading inside <span class="heading-inverted">hero</span></h1>
     </header>
 
