update: added project and blog page

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
         <div class="nav-brand">om gaikwad</div>
         <ul class="list-non-bullet nav-pills">
             <li class="list-item-inline">
-                <a class="link link-active" href="#">home</a>
+                <a class="link link-active" href="/index.html">home</a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="#">projects</a>
+                <a class="link" href="/projects.html">projects</a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="#">blogs</a>
+                <a class="link" href="/blogs.html">blogs</a>
             </li>
         </ul>
     </nav>
@@ -47,7 +47,7 @@
         <div class="container container-center">
             <h1>projects</h1>
             <p>i like to showcase my work and thus, you can see my projects which is hosted online here.</p>
-            <a href="#" class="link link-secondary">browse projects</a>
+            <a href="/projects.html" class="link link-secondary">browse projects</a>
         </div>
     </section>
 
@@ -56,7 +56,7 @@
         <div class="container container-center">
             <h1>blogs</h1>
             <p>i write blogs, you can check it out here!</p>
-            <a href="#" class="link link-secondary">read blogs</a>
+            <a href="/blogs.html" class="link link-secondary">read blogs</a>
         </div>
     </section>
 
