--- a/blogs.html
+++ b/blogs.html
@@ -25,5 +25,26 @@
     <header class="hero">
         <h1 class="hero-heading">my <span class="heading-inverted">blogs</span></h1>
     </header>
+
+    <ul class="list-non-bullet">
+        <li>
+            <div class="container container-center">
+                <h1>dummy blog 1</h1>
+                <small>1st July, 2021</small>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut odio quod modi, explicabo veniam ab tenetur 
+                    numquam. Nostrum, optio id laboriosam, saepe earum dicta sequi voluptate officia, provident odio similique?</p>
+                <a class="link link-primary" href="#">Read More</a>
+            </div>
+        </li>
+        <li>
+            <div class="container container-center">
+                <h1>dummy blog 2</h1>
+                <small>2nd July, 2021</small>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut odio quod modi, explicabo veniam ab tenetur 
+                    numquam. Nostrum, optio id laboriosam, saepe earum dicta sequi voluptate officia, provident odio similique?</p>
+                <a class="link link-primary" href="#">Read More</a>
+            </div>
+        </li>
+    </ul>
 </body>
 </html>
