navbar header css

--- a/index.html
+++ b/index.html
@@ -13,17 +13,20 @@
     <!-- Navbar -->
     <nav class="navigation container">
         <div class="nav-brand">om gaikwad</div>
-        <ul class="list-non-bullet nav-pills">
-            <li class="list-item-inline">
-                <a class="link link-active" href="/index.html">home</a>
-            </li>
-            <li class="list-item-inline">
-                <a class="link" href="/projects.html">projects</a>
-            </li>
-            <li class="list-item-inline">
-                <a class="link" href="/blogs.html">blogs</a>
-            </li>
-        </ul>
+        <div class="nav-header-link">
+            <ul class="list-non-bullet nav-pills">
+                <li class="list-item-inline">
+                    <a class="link link-active" href="/index.html">home</a>
+                </li>
+                <li class="list-item-inline">
+                    <a class="link" href="/projects.html">projects</a>
+                </li>
+                <li class="list-item-inline">
+                    <a class="link" href="/blogs.html">blogs</a>
+                </li>
+            </ul>
+        </div>
+        
     </nav>
 
     <!-- Header -->
