update: add new projects

--- a/blogs.html
+++ b/blogs.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav class="navigation container">
-        <div class="nav-brand">om gaikwad</div>
+        <a href="index.html" class="nav-brand">om gaikwad</a>
         <ul class="list-non-bullet nav-pills">
             <li class="list-item-inline">
                 <a class="link" href="/index.html">home</a>
