--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <!-- Navbar -->
     <nav class="navigation container">
-        <div class="nav-brand">om gaikwad</div>
+        <a href="index.html" class="nav-brand">om gaikwad</a>
             <ul class="list-non-bullet nav-pills">
                 <li class="list-item-inline">
                     <a class="link link-active" href="/index.html">home</a>
@@ -36,9 +36,13 @@
     <section class="section ow">
         <div class="container container-center">
             <h1>technologies</h1>
-            <p>i'm familiar with HTML5, CSS3, JavaScript, ReactJS, GIT, Web Hosting, C, C++, Object Oriented
-                Programming,
-                Data Structures and Algorithms.</p>
+            <p>i know, <br>
+                <strong>Frameworks:</strong>  ReactJS, Bootstrap <br>
+                <strong>Languages:</strong> C, C++, Python <br>
+                <strong>Front-end:</strong> HTML5, CSS3, JavaScript <br>
+                <strong>Version Control:</strong> Git, GitHub <br>
+                <strong>Hosting:</strong> Netlify <br>
+                <strong>Problem Solving:</strong> Object Oriented Programming, Data Structures and Algorithms</p>
         </div>
     </section>
 
@@ -47,7 +51,7 @@
         <div class="container container-center">
             <h1>projects</h1>
             <p>i like to showcase my work and thus, you can see my projects which is hosted online here.</p>
-            <a href="/projects.html" class="link link-secondary">browse projects</a>
+            <a href="/projects.html" class="link link-secondary">projects</a>
         </div>
     </section>
 
