--- a/projects.html
+++ b/projects.html
@@ -11,7 +11,7 @@
 
 <body>
     <nav class="navigation container">
-        <div class="nav-brand">om gaikwad</div>
+        <a href="index.html" class="nav-brand">om gaikwad</a>
         <ul class="list-non-bullet nav-pills">
             <li class="list-item-inline">
                 <a class="link" href="/index.html">home</a>
@@ -26,10 +26,68 @@
     </nav>
 
     <header class="hero">
-        <h1 class="hero-heading">my <span class="heading-inverted">code</span></h1>
+        <h1 class="hero-heading">see my <span class="heading-inverted">code</span></h1>
     </header>
 
     <ul class="list-non-bullet">
+        <li>
+            <div class="container container-center">
+                <h1>moviemaniac</h1>
+                <small>15th July, 2021</small>
+                <p>do you love watching movies? here are some great recommendation you can find genre wise,
+                    moviemaniac is built using <strong>ReactJS</strong>.
+                </p>
+
+                <a class="link link-primary" href="https://wr97q.csb.app/">try live</a>
+                <a class="link link-secondary" href="https://codesandbox.io/s/movie-recommendation-reactapp-wr97q">view code</a>
+            </div>
+
+        </li>
+
+        <li>
+            <div class="container container-center">
+                <h1>emoji interpreter</h1>
+                <small>12th July, 2021</small>
+                <p>if you struggle with emoji's and their meaning,
+                    this emoji interpreter app lets you know its meanings, it is built using <strong>ReactJS</strong>.
+                </p>
+
+                <a class="link link-primary" href="https://m0rob.csb.app/">try live</a>
+                <a class="link link-secondary" href="https://github.com/omgaikwad/shakespeare-translator">view code</a>
+            </div>
+
+        </li>
+
+        <li>
+            <div class="container container-center">
+                <h1>shakespeare translator</h1>
+                <small>5th July, 2021</small>
+                <p>this shakespeare translator app is built using <strong>JavaScript</strong>.
+                    shakespeare invented many words and his style of narration in many ways was unique to his time. his
+                    ever popular works ( dramas and poems ) makes his language style live even today. this translator
+                    takes English as input and converts to Shakespeare English.
+                </p>
+
+                <a class="link link-primary" href="https://shakespeare-translator-om.netlify.app/">try live</a>
+                <a class="link link-secondary" href="https://github.com/omgaikwad/shakespeare-translator">view code</a>
+            </div>
+
+        </li>
+
+        <li>
+            <div class="container container-center">
+                <h1>minion translator</h1>
+                <small>2nd July, 2021</small>
+                <p>this minion translator app is built using <strong>JavaScript</strong>.
+                    This language is spoken by the minions in Despicable Me.
+                    translate from English to Minion speak. </p>
+
+                <a class="link link-primary" href="https://minion-translator-om.netlify.app/">try live</a>
+                <a class="link link-secondary" href="https://github.com/omgaikwad/banana-speaks">view code</a>
+            </div>
+
+        </li>
+
         <li>
             <div class="container container-center">
                 <h1>f.r.i.e.n.d.s. tv-show fan?</h1>
@@ -38,9 +96,8 @@
                     You can send it to friends and family to find out who really knows you. </p>
 
                 <a class="link link-primary"
-                    href="https://replit.com/@omgaikwad/doYouKnowMeQuiz#index.js?embed=1&output=1">play game</a>
-                <a class="link link-secondary" href="https://github.com/omgaikwad/doYouKnowOm-Quiz">view source code on
-                    github</a>
+                    href="https://replit.com/@omgaikwad/friendsTVquiz-assign1#index.js?embed=1&output=1">play game</a>
+                <a class="link link-secondary" href="https://github.com/omgaikwad/doYouKnowOm-Quiz">view code</a>
             </div>
 
         </li>
@@ -54,11 +111,10 @@
 
                 <a class="link link-primary"
                     href="https://replit.com/@omgaikwad/doYouKnowMeQuiz#index.js?embed=1&output=1">play game</a>
-                <a class="link link-secondary" href="https://github.com/omgaikwad/doYouKnowOm-Quiz">view source code on
-                    github</a>
+                <a class="link link-secondary" href="https://github.com/omgaikwad/doYouKnowOm-Quiz">view code</a>
             </div>
         </li>
-        </ul>
+    </ul>
 </body>
 
 </html>
