--- a/projects.html
+++ b/projects.html
@@ -39,7 +39,7 @@
                 </p>
 
                 <a class="link link-primary" href="https://wr97q.csb.app/">try live</a>
-                <a class="link link-secondary" href="https://codesandbox.io/s/movie-recommendation-reactapp-wr97q">view code</a>
+                <a class="link link-secondary" href="https://github.com/omgaikwad/moviemaniac-reactjs">view code</a>
             </div>
 
         </li>
