--- a/projects.html
+++ b/projects.html
@@ -32,6 +32,20 @@
     <ul class="list-non-bullet">
         <li>
             <div class="container container-center">
+                <h1>cash register</h1>
+                <small>3rd August, 2021</small>
+                <p>Enter the bill amount and cash given by the customer and know minimum number of notes to return. cash register
+                    is built using <strong>Vanilla JavaScript</strong>.
+                </p>
+
+                <a class="link link-primary" href="https://register-manager-app.netlify.app/">try live</a>
+                <a class="link link-secondary" href="https://github.com/omgaikwad/cash-register-manager">view code</a>
+            </div>
+
+        </li>
+
+        <li>
+            <div class="container container-center">
                 <h1>moviemaniac</h1>
                 <small>15th July, 2021</small>
                 <p>do you love watching movies? here are some great recommendation you can find genre wise,
