--- a/projects.html
+++ b/projects.html
@@ -32,6 +32,59 @@
     <ul class="list-non-bullet">
         <li>
             <div class="container container-center">
+                <h1>stock profit and loss calculator</h1>
+                <small>18th August, 2021</small>
+                <p>find out total profit and profit percentage or total loss and loss percentage. Built using <strong>Vanilla JavaScript</strong>.
+                </p>
+
+                <a class="link link-primary" href="https://profit-and-loss-by-om.netlify.app/">try live</a>
+                <a class="link link-secondary" href="https://github.com/omgaikwad/profit-or-loss-in-stocks">view code</a>
+            </div>
+
+        </li>
+
+        <li>
+            <div class="container container-center">
+                <h1>palindrome birthday</h1>
+                <small>16th August, 2021</small>
+                <p>find out if your birthday is palindrome or not. Built using <strong>Vanilla JavaScript</strong>.
+                </p>
+
+                <a class="link link-primary" href="https://palindrome-date-app.netlify.app/">try live</a>
+                <a class="link link-secondary" href="https://github.com/omgaikwad/palindrome-birthday">view code</a>
+            </div>
+
+        </li>
+
+        <li>
+            <div class="container container-center">
+                <h1>fun with triangles</h1>
+                <small>14th August, 2021</small>
+                <p>find out hypotenuse of triangle, play triangle quiz or find out area of triangle. Built using <strong>Vanilla JavaScript</strong>.
+                </p>
+
+                <a class="link link-primary" href="https://fun-with-triangle-by-om.netlify.app/">try live</a>
+                <a class="link link-secondary" href="https://github.com/omgaikwad/fun-with-triangles">view code</a>
+            </div>
+
+        </li>
+
+        <li>
+            <div class="container container-center">
+                <h1>is your birthday lucky?</h1>
+                <small>4th August, 2021</small>
+                <p>Enter your birthday and we will tell you if its luck or not. This
+                    is built using <strong>Vanilla JavaScript</strong>.
+                </p>
+
+                <a class="link link-primary" href="https://is-your-birthday-luckyy.netlify.app/">try live</a>
+                <a class="link link-secondary" href="https://github.com/omgaikwad/is-your-birthday-lucky">view code</a>
+            </div>
+
+        </li>
+
+        <li>
+            <div class="container container-center">
                 <h1>cash register</h1>
                 <small>3rd August, 2021</small>
                 <p>Enter the bill amount and cash given by the customer and know minimum number of notes to return. cash register
