--- a/blogs.html
+++ b/blogs.html
@@ -29,20 +29,25 @@
     <ul class="list-non-bullet">
         <li>
             <div class="container container-center">
-                <h1>dummy blog 1</h1>
-                <small>1st July, 2021</small>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut odio quod modi, explicabo veniam ab tenetur 
-                    numquam. Nostrum, optio id laboriosam, saepe earum dicta sequi voluptate officia, provident odio similique?</p>
-                <a class="link link-primary" href="#">Read More</a>
+                <h1>3 resources to help you design better websites</h1>
+                <small>19th August, 2021</small>
+                <p>As a web developer, I personally struggle while selecting colors and fonts. Many of us 
+                    don't know which background and font color go hand in hand with the text font family.
+
+                    So here are few resources to help you select better-looking colors and fonts.</p>
+                <a class="link link-primary" href="https://omgaikwad.hashnode.dev/3-resources-to-help-you-design-better-websites">Read More</a>
             </div>
         </li>
         <li>
             <div class="container container-center">
-                <h1>dummy blog 2</h1>
-                <small>2nd July, 2021</small>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut odio quod modi, explicabo veniam ab tenetur 
-                    numquam. Nostrum, optio id laboriosam, saepe earum dicta sequi voluptate officia, provident odio similique?</p>
-                <a class="link link-primary" href="#">Read More</a>
+                <h1>3 Books to Master JavaScript</h1>
+                <small>18th August, 2021</small>
+                <p>JavaScript is currently one of the most popular programming languages in the world. Its various front-end and back-end frameworks like ReactJS and NodeJS are used widely to develop interactive web apps.
+
+                    As a developer, it only makes sense to learn and master JavaScript.
+                    
+                    So here are the three best books to master JavaScript</p>
+                <a class="link link-primary" href="https://omgaikwad.hashnode.dev/3-books-to-master-javascript">Read More</a>
             </div>
         </li>
     </ul>
