--- a/blogs.html
+++ b/blogs.html
@@ -29,6 +29,17 @@
     <ul class="list-non-bullet">
         <li>
             <div class="container container-center">
+                <h1>Create a button that changes element text color on click in JavaScript</h1>
+                <small>20th August, 2021</small>
+                <p>We have to create a button in HTML which will change the text color of the heading on click.
+
+                    We will be going to see how to do this in JavaScript step by step.</p>
+                <a class="link link-primary" href="https://omgaikwad.hashnode.dev/create-a-button-that-changes-element-text-color-on-click-in-javascript">Read More</a>
+            </div>
+        </li>
+
+        <li>
+            <div class="container container-center">
                 <h1>3 resources to help you design better websites</h1>
                 <small>19th August, 2021</small>
                 <p>As a web developer, I personally struggle while selecting colors and fonts. Many of us 
@@ -38,6 +49,7 @@
                 <a class="link link-primary" href="https://omgaikwad.hashnode.dev/3-resources-to-help-you-design-better-websites">Read More</a>
             </div>
         </li>
+
         <li>
             <div class="container container-center">
                 <h1>3 Books to Master JavaScript</h1>
